<resources>
    <string name="app_name">Sigma</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Иван Иванов</string>
    <string name="News">News</string>
    <string name="profile">Profile</string>
    <string name="description">Описание</string>
    <string name="title">Заголовок</string>
    <string name="add_photo">Add photo</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="delete_from_favorite">Delete from favorite</string>
    <string name="post">Post</string>
    <string name="e_mail_adress">e-mail adress</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account_or_log_in">create an account</string>
    <string name="confrim">Confrim</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="cancel">Cancel</string>
    <string name="log_in_or">Log in or </string>
    <string name="create_lower">create an account</string>
    <string name="refuse">Refuse</string>
    <string name="ok">Ok</string>
    <string name="nothing_to_moderate">Nothing to moderate</string>
    <string name="moderate">Moderate</string>
    <string name="search">Search</string>
    <string name="news_feed">News feed</string>
    <string name="enter_tag_or_heading">Enter tag or heading</string>
    <string name="auth">Авторизация</string>

    <string name="registration">Регистрация</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="password_str">Password:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="close">Close</string>
    <string name="authorisation">Authorisation</string>
    <string name="enteryourtags">#enteryourtags</string>
    <string name="email">Enter gmail email</string>
    <string name="favorite">Favorite</string>
    <string name="posts_send">Posts send:</string>
    <string name="messages">Messages</string>
    <string name="group_chat">Group chat</string>
    <string name="start_conversation">Start conversation</string>
    <string name="dialog">Dialog</string>
    <string name="add_member">Add member</string>
    <string name="enter_login">Enter login</string>
    <string name="message_options">Message options</string>
    <string name="copy_text">Copy text</string>
    <string name="edit_message">Edit message</string>
    <string name="delete_message">Delete message</string>
    <string name="pin_message">Pin message</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="settings">Настройки</string>
    <string name="forward_message">Forward message</string>
    <string name="choose_chat_or_dialog">Choose chat or dialog</string>
    <string name="reply">Reply</string>

    <string-array name="saved">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>1</item>
    </string-array>
</resources>
