<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sigma"
        android:layout_gravity="center">

    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="105dp"
            android:layout_height="200dp"
            android:text="@string/log_in_or"
            android:textColor="#000000"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:visibility="visible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:text="@string/create_lower"
            android:textColor="@color/blue_800"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:visibility="visible"/>

    </LinearLayout>


    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login">

    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password">

    </EditText>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confrim"
        android:textAllCaps="false">

    </Button>
    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@color/blue_800"
        >

    </Button>

</LinearLayout>