<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sigma"
        android:layout_gravity="center">

    </ImageView>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/create_an_account"
            android:textColor="#000000"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:visibility="visible"/>






    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login">

    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password">

    </EditText>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confrim"
        android:textAllCaps="false">

    </Button>
    <Button
        android:id="@+id/cancel"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>