<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_1"
        android:enabled="true"
        android:icon="@drawable/baseline_turned_in_not_black_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_posts"
        android:enabled="true"
        android:icon="@drawable/baseline_list_black_24dp"
        android:title="@string/News"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_box_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        />

</menu>