<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_user"
    android:background="@drawable/gradient_list"
    tools:context=".User">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/Username"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:text="@string/e_mail_adress">

    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:text="@string/phone_number">

    </TextView>
</LinearLayout>