<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343438"
    tools:context=".NewsFeed">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:text="@string/news_feed"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_weight="15"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>
        <EditText
            android:id="@+id/watch"
            android:hint="@string/enter_tag_or_heading"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:layout_weight="15"
            android:paddingTop="5dp"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </EditText>

        <Button
            android:visibility="gone"
            android:id="@+id/search"
            android:layout_weight="1"
            android:background="@color/blue_800"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </Button>

        <TextView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="⋮"
            android:textColor="#FFFFFF"
            android:textSize="25sp">

        </TextView>


    </LinearLayout>

    <Button
        android:id="@+id/moderate"
        android:text="Moderate"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView">
    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>